close #123 | remove images no longer used in the documentation

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
         <section>
           <h1 id="images-and-videos">Images and videos</h1>
-          <p>Images and videos are displayed using the <code>&lt;img&gt;</code> and <code>&lt;video&gt;</code> elements. If a caption is needed, wrap images and videos within the <code>&lt;figure&gt;</code> element. The <code>&lt;figcaption&gt;</code> element can contain a heading and one or more paragraphs.</p>
+          <p>Images and videos are displayed using the <code>&lt;img&gt;</code> and <code>&lt;video&gt;</code> elements. If a caption is needed, wrap images and videos within the <code>&lt;figure&gt;</code> element and use the <code>&lt;figcaption&gt;</code> element for the caption, as shown in the code snippet below. The <code>&lt;figcaption&gt;</code> element can contain a heading and one or more paragraphs.</p>
           <figure>
             <img style="width: 100%" src="./media/image.png">
             <figcaption>
@@ -185,7 +185,7 @@
 &lt;/section&gt;</code></pre>
             <figcaption>
               <h1>Code snippet of an image, with a descriptive caption.</h1>
-              <p>The <code>&lt;figure&gt;</code> element may be avoided if there is no need for a caption, in such a case the <code>&lt;img&gt;</code> element is a child of the <code>&lt;section&gt;</code> element. The default width is 600px, authors can use inline style declarations to customise the width, as described in section <strong><a href="#customisations">Customisations</a></strong>.</p>
+              <p>The <code>&lt;figure&gt;</code> element may be avoided if there is no need for a caption, in such a case the <code>&lt;img&gt;</code> element is a child of the <code>&lt;section&gt;</code> element. The default width of images is 600px, equals to the default width of text paragraph and code snippets. Authors can use inline style declarations to customise the width, as described in section <strong><a href="#customisations">Customisations</a></strong>.</p>
             </figcaption>
           </figure>
           <h2>Videos</h2>
@@ -205,7 +205,7 @@
 &lt;/section&gt;</code></pre>
             <figcaption>
               <h1>Code snippet of a video with a caption.</h1>
-              <p>As with images, videos can be inserted in the article header and have a default width of 600px.</p>
+              <p>As with images, videos have a default width of 600 pixels, customisable with inline declarations as described in section <strong><a href="#customisations">Customisations</a></strong>.</p>
             </figcaption>
           </figure>
         </section>
@@ -505,7 +505,7 @@
   &lt;/p&gt;
 &lt;/figure&gt;</code></pre>
             <figcaption>
-              <p>Use TeX functions for more sophisticated math typesetting. Use the <code>&lt;figure&gt;</code> element if a caption is needed. The default width of the <code>&lt;p&gt;</code> element whitin the <code>&lt;figure&gt;</code> element is 600px. Authors can use inline style declarations to customise the width for larger formulas, as described in section <strong><a href="#customisations">Customisations</a></strong>.</p>
+              <p>Use TeX functions for more sophisticated math typesetting. Use the <code>&lt;figure&gt;</code> element if a caption is needed. The default width of the <code>&lt;p&gt;</code> element within the <code>&lt;figure&gt;</code> element is 600px. Authors can use inline style declarations to customise the width for larger formulas, as described in section <strong><a href="#customisations">Customisations</a></strong>.</p>
             </figcaption>
           </figure>
         </section>
