close #126 | describe how to install with npm

--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
               <p>Rapido can be used in a web document created from scratch or within an existing document, the CSS class <code>rapido</code> makes Rapido not invasive with respect to existing CSS code.</p>
             </figcaption>
           </figure>
+          <h2>Install with npm</h2>
+          <p>Alternatively, you may want to install Rapido using <a href="https://www.npmjs.com/">npm</a>. This is especially useful when you want to add Rapido as a dependency of your application.</p>
+          <pre>
+<code>npm install @nextbitlabs/rapido</code>
+</pre>
           <h2>Get your hands dirty</h2>
           <p>If you want to try Rapido then you  need the skeleton of an HTML document. The next code snippet provides a minimal template, copy the snippet in a fresh HTML file.</p>
           <figure>
